[gd_scene format=3 uid="uid://h7qg8v1nfrg5"]

[ext_resource type="Script" uid="uid://dl5jhjops7ere" path="res://objects/drop_platform_01/drop_platform_01.gd" id="1_jt5jf"]
[ext_resource type="Texture2D" uid="uid://dwf52w2t0vccm" path="res://assets/graphics/environment/drop_platform_01.png" id="1_tyc87"]
[ext_resource type="Script" uid="uid://gg0uxpt06y26" path="res://scripts/nodes/anim_sprite_player.gd" id="2_jt5jf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3tdmq"]
atlas = ExtResource("1_tyc87")
region = Rect2(48, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfssr"]
atlas = ExtResource("1_tyc87")
region = Rect2(96, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpku1"]
atlas = ExtResource("1_tyc87")
region = Rect2(144, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_14l7b"]
atlas = ExtResource("1_tyc87")
region = Rect2(192, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_prfcj"]
atlas = ExtResource("1_tyc87")
region = Rect2(240, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahyp5"]
atlas = ExtResource("1_tyc87")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fptdd"]
atlas = ExtResource("1_tyc87")
region = Rect2(192, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiypq"]
atlas = ExtResource("1_tyc87")
region = Rect2(144, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxq3i"]
atlas = ExtResource("1_tyc87")
region = Rect2(96, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxesf"]
atlas = ExtResource("1_tyc87")
region = Rect2(48, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic6uv"]
atlas = ExtResource("1_tyc87")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6krn"]
atlas = ExtResource("1_tyc87")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6m40"]
atlas = ExtResource("1_tyc87")
region = Rect2(48, 0, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vebk2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tdmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfssr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpku1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14l7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prfcj")
}],
"loop": false,
"name": &"drop",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahyp5")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fptdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiypq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxq3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxesf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic6uv")
}],
"loop": false,
"name": &"reset",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6krn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6m40")
}],
"loop": true,
"name": &"wiggle",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_557dn"]
size = Vector2(48, 2)

[sub_resource type="Animation" id="Animation_wrbi4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7rgp2"]
length = 0.41666666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"drop"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.09),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3e674"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c2axc"]
length = 0.41666666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"reset"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_5b417"]
length = 0.16666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"wiggle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.083333336),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0gkg1"]
_data = {
&"RESET": SubResource("Animation_wrbi4"),
&"drop": SubResource("Animation_7rgp2"),
&"idle": SubResource("Animation_3e674"),
&"reset": SubResource("Animation_c2axc"),
&"wiggle": SubResource("Animation_5b417")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6nxc"]
size = Vector2(48, 2)

[node name="DropPlatform01" type="Node2D" unique_id=673612480]
script = ExtResource("1_jt5jf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1530008914]
sprite_frames = SubResource("SpriteFrames_vebk2")
animation = &"idle"
offset = Vector2(0, 4)

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=387459669]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=990507751]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_557dn")
one_way_collision = true

[node name="AnimPlayer" type="AnimationPlayer" parent="." unique_id=1290164038 node_paths=PackedStringArray("animated_sprite")]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_0gkg1")
autoplay = &"idle"
script = ExtResource("2_jt5jf")
animated_sprite = NodePath("../AnimatedSprite2D")
metadata/_custom_type_script = "uid://gg0uxpt06y26"

[node name="TriggerArea" type="Area2D" parent="." unique_id=253897579]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea" unique_id=1282570102]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_o6nxc")

[connection signal="animation_finished" from="AnimPlayer" to="." method="_on_anim_player_animation_finished"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="." method="_on_trigger_area_body_exited"]
